<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.client_menu.ui.choose_role.ChooseRoleActivity">

    <TextView
        android:id="@+id/txtChooseHeader"
        style="@style/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_role"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChooseTrainer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/trainer"
        android:layout_marginHorizontal="10dp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnChooseClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnChooseClient" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChooseClient"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/client"
        android:layout_marginHorizontal="10dp"
        app:cornerRadius="100dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnChooseTrainer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>