<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.sign_up.SignUpActivity">


        <TextView
            android:id="@+id/textView"
            style="@style/text_header"
            android:layout_marginTop="44dp"
            android:text="@string/create_your_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            style="@style/custom_large_btn"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_goolge_icon"
            android:paddingStart="30dp"
            android:text="@string/cont_with_google"
            android:textAlignment="center"
            android:textColor="#3F414E"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/or_sign_up_with_email"
            android:textColor="#A1A4B2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="340dp"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:textColorHint="#A1A4B2"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="340dp"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:textColorHint="#A1A4B2"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="340dp"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:textColorHint="#A1A4B2"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            style="@style/custom_large_btn"
            android:layout_marginTop="100dp"
            android:text="@string/get_started"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPass" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="253dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:text="@string/i_have_read"
            android:textColor="#A1A4B2"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPass"
            app:layout_constraintVertical_bias="0.096" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="31dp"
            android:layout_height="28dp"
            android:layout_marginEnd="56dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>